--- a/src/components/TeamBlock/TeamBlockComponent.style.css
+++ b/src/components/TeamBlock/TeamBlockComponent.style.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     background: black;
-    width: 50%;
+    width: 25%;
     height: 100%;
 }
 
